@@ -1,0 +1,15 @@
+# Default prop for ViPERFX 
+
+# LOW POWER AUDIO TWEAKS
+lpa.decode=false
+lpa.releaselock=false
+lpa.use-stagefright=false
+tunnel.decode=false
+
+# OTHER AUDIO TWEAKS
+audio.deep_buffer.media=false
+tunnel.audiovideo.decode=false
+persist.sys.media.use-awesome=1
+ro.audio.samplerate=48000
+ro.audio.pcm.samplerate=48000
+#
