@@ -45,16 +45,23 @@ POSTFSDATA=true
 # Set to true if you need late_start service script
 LATESTARTSERVICE=true
 
+# Set to true if you need custom setprop script
+PROPFILE=true
+# personal file's name located anywhere on your internal storage
+buildname="custom_build.prop"
+tweakname="tweak.prop"
+
 VERSION="2.5.0.5"
 APKNAME=ViPERFX.apk
 PACKAGENAME=com.audlabs.viperfx
 
 # FILE LOCATIONS
 CONFIG_FILE=/system/etc/audio_effects.conf
-HTC_CONFIG_FILE=/system/etc/htc_audio_effects.conf
 VENDOR_CONFIG=/system/vendor/etc/audio_effects.conf
+HTC_CONFIG_FILE=/system/etc/htc_audio_effects.conf
 OTHER_VENDOR_FILE=/system/etc/audio_effects_vendor.conf
-OFFLOAD_CONFIG=/system/etc/audio_effects_offload.conf
+#OFFLOAD_CONFIG=/system/vendor/etc/audio_effects_offload.conf
+OFFLOAD_CONFIG=/system/vendor/etc/audio_offload_effects.conf
 HTC_VENDOR=/vendor/etc/audio_effects.conf
 
 ##########################################################################################
@@ -67,8 +74,9 @@ print_modname() {
   ui_print "*******************************"
   ui_print "        ViPERFX (Magisk)       "
   ui_print "           v$VERSION           "
-  ui_print "  Magisk Mod by laggardkernel  "
+  ui_print "         ViPER’s Audio         "
   ui_print "*******************************"
+  ui_print "  Magisk Mod by laggardkernel  "
 }
 
 ##########################################################################################
@@ -101,6 +109,14 @@ set_permissions() {
   # Default permissions, don't remove them
   set_perm_recursive  $MODPATH  0  0  0755  0644
 
+  if [ -d "$MODPATH/system/bin" ]; then
+    set_perm_recursive  $MODPATH/system/bin  0  2000  0755  0755
+  fi
+
+  if [ -d "$MODPATH/system/xbin" ]; then
+    set_perm_recursive  $MODPATH/system/xbin  0  2000  0755  0755
+  fi
+  
   # Only some special files require specific permission settings
   # The default permissions should be good enough for most cases
 
